tests/negative/runtime/indirect_div_zero.stream
// EXPECT: Runtime Error
var x = 5;
var y = 5;
print(100 / (x - y)); // 100 / 0